Alteração de um texto que estava incorreto

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,9 +17,10 @@
   "exploreMy": "Explore My",
   "backendSoftSkills": "Backend Development & Soft Skills",
   "basic": "Basic",
-  "intermdiate": "Intermediate",
+  "intermediate": "Intermediate",
   "experienced": "Experienced",
   "browseMyRecent": "Browse My Recent",
+  "recentProjects": "Projects",
   "getInTouch": "Get In Touch",
   "contactMe": "Contact Me"
 }
