Corrigido palavra experiencia

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,6 +1,6 @@
 {
   "about": "Sobre",
-  "experience": "Experiencia",
+  "experience": "Experiência",
   "projects": "Projetos",
   "contact": "Contato",
   "greeting": "Ola, Eu Sou",
